<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="60dp"
    android:layout_marginLeft="0dp"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/label_state"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/connection_state_delayshot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="14sp" />
    </LinearLayout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginLeft="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/delayshot_interval"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginLeft="0dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/delayshot_hour_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_marginLeft="0dp"
            android:ems="2"
            android:gravity="center_horizontal"
            android:hint="00"
            android:inputType="phone"
            android:padding="1dp"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/delayshot_hour"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/delayshot_minute_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:ems="2"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:hint="00"
            android:inputType="phone"
            android:padding="1dp"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/delayshot_minute"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/delayshot_second_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_marginLeft="0dp"
            android:ems="2"
            android:gravity="center_horizontal"
            android:hint="00"
            android:inputType="phone"
            android:padding="1dp"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/delayshot_second"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginLeft="0dp"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/delayshot_baoguang_time"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginLeft="0dp"
        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/delayshot_baoguang_hour_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_marginLeft="0dp"
            android:ems="2"
            android:gravity="center_horizontal"
            android:hint="00"
            android:inputType="phone"
            android:padding="1dp"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/baoguang_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/delayshot_hour"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/delayshot_baoguang_minute_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_marginLeft="0dp"
            android:ems="2"
            android:gravity="center_horizontal"
            android:hint="00"
            android:inputType="phone"
            android:padding="1dp"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/baoguang_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/delayshot_minute"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/delayshot_baoguang_second_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_marginLeft="0dp"
            android:ems="2"
            android:gravity="center_horizontal"
            android:hint="00"
            android:inputType="phone"
            android:padding="1dp"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/baoguang_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/delayshot_second"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginLeft="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/delayshot_shottime_total"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/delayshot_shot_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_marginLeft="0dp"
            android:ems="5"
            android:gravity="center_horizontal"
            android:hint="00"
            android:inputType="phone"
            android:padding="1dp"
            android:selectAllOnFocus="true"
            android:textSize="17sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="0dp"
        android:layout_marginLeft="0dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal"
            android:text="@string/delayshot_left"
            android:textSize="20sp" />
        <Switch
            android:id="@+id/switch2_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|fill_vertical|center_horizontal|fill_horizontal"
            android:layout_marginLeft="0dp"
            android:checked="false"
            android:switchMinWidth="150dp"
            android:switchPadding="10dp"
            android:textOff=""
            android:textOn=""
            android:typeface="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal"
            android:text="@string/delayshot_right"
            android:textSize="20sp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginLeft="0dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal"
            android:text="@string/delayshot_dingdian"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch3_dingdian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:checked="false"
            android:switchMinWidth="80dp"
            android:switchPadding="10dp"
            android:textOff="@string/Close"
            android:textOn="@string/Open"
            android:typeface="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginLeft="0dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/shottime_total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/delayshot_shot_time"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/shottime_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/delayshot_shot_time_default"
                android:textSize="12sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginLeft="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shot_times_remain_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/delayshot_shot_remain"
                android:textSize="12sp" />



            <TextView
                android:id="@+id/shot_times_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/delayshot_shot_remain_default"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="0dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/img_btn_delayshot_start"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="0dp"
            android:background="@drawable/stop"
            android:scaleType="fitXY" />
    </LinearLayout>

</LinearLayout>