<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sushiyu.smartshot.VedioShot">


    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="655dp"
        android:layout_margin="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp">

        <!--LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </LinearLayout-->

        <!--LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="14sp" />
        </LinearLayout-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/speed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/Speed" />

            <TextView
                android:id="@+id/speed_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp" />

            <SeekBar
                android:id="@+id/seekbar_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="0dp"
                android:max="100"
                android:padding="10px"
                android:progress="50" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/switch_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:text="@string/Reverse" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/switch_tv"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginRight="80dp"
                android:checked="true"
                android:gravity="center_horizontal|center"
                android:switchMinWidth="80dp"
                android:switchPadding="10dp"
                android:textOff="@string/Close"
                android:textOn="@string/Open"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/switch_danpai_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:text="@string/Manual" />

            <Switch
                android:id="@+id/switch1_danpai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/switch_danpai_tv"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="80dp"
                android:checked="false"
                android:switchMinWidth="80dp"
                android:switchPadding="10dp"
                android:textOff="@string/Close"
                android:textOn="@string/Open"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton_left"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/left"
                android:scaleType="fitXY" />

            <ImageButton
                android:id="@+id/imageButton_start"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:background="@drawable/start"
                android:scaleType="fitXY" />

            <ImageButton
                android:id="@+id/imageButton_right"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/right"
                android:scaleType="fitXY" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>

